--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,8 @@
     <string name="title_settings">Settings</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_main2">Main2Activity</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="home_fragment_placeholder">Hello HOME fragment</string>
+    <string name="settings_fragment_placeholder">Hello SETTINGS fragment</string>
+    <string name="map_fragment_placeholder">Hello MAP fragment</string>
 
 </resources>
